After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 766603 - Location services won't work with Flatpak
Location services won't work with Flatpak
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Privacy
git master
Other Linux
: Normal normal
: ---
Assigned To: Rui Matos
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-05-18 11:37 UTC by Bastien Nocera
Modified: 2016-07-25 11:51 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
privacy: Update for PermissionStore DBus API changes (1.42 KB, patch)
2016-07-13 17:28 UTC, Zeeshan Ali
committed Details | Review

Description Bastien Nocera 2016-05-18 11:37:25 UTC
In the flatpak 0.6.0 release announcement:
> * The bus name and interface name for the permission
>    store is changed, it was in org.freedesktop.XdgApp, but is
>    now in org.freedesktop.impl.portal.DesktopPortal.
Comment 1 Zeeshan Ali 2016-05-18 11:53:58 UTC
(In reply to Bastien Nocera from comment #0)
> In the flatpak 0.6.0 release announcement:
> > * The bus name and interface name for the permission
> >    store is changed, it was in org.freedesktop.XdgApp, but is
> >    now in org.freedesktop.impl.portal.DesktopPortal.

Great! This breaks gnome-shell too. :(
Comment 2 Alexander Larsson 2016-05-18 12:16:49 UTC
It breaks softly though. As these dependencies were runtime optional, right? I mean, we didn't have hard deps on xdg-app, did we?

Also, technically, this is a better name, as its independent of flatpak (could be broken out and shared if needed).
Comment 3 Florian Müllner 2016-05-18 12:49:44 UTC
(In reply to Zeeshan Ali (Khattak) from comment #1)
> Great! This breaks gnome-shell too. :(

I filed bug 766598 earlier.
Comment 4 Zeeshan Ali 2016-05-18 13:42:44 UTC
(In reply to Alexander Larsson from comment #2)
> It breaks softly though. As these dependencies were runtime optional, right?
> I mean, we didn't have hard deps on xdg-app, did we?
> 
> Also, technically, this is a better name, as its independent of flatpak
> (could be broken out and shared if needed).

Well, it won't break in the sense that control-center and shell won't build or stop working but once users start to save their location preferences, we'll all of a sudden not be able to remember them or save them, until we port these components. It's D-Bus though, so we can still remain backwards compatible when we port.

It's only the API that's changed right? The store itself remains intact when upgrading from xdg-app to flatpak?
Comment 5 Alexander Larsson 2016-05-19 13:02:46 UTC
Yes, the database will be migrated.
Comment 6 Florian Müllner 2016-05-19 13:55:40 UTC
(In reply to Alexander Larsson from comment #5)
> Yes, the database will be migrated.

In that case, simply updating the bus/interface names looks good enough to me for 3.21.x - for users following the development cycle there'll be a small window where stuff can break if gs/gcc/flatpak aren't updated in lock-step, but that should sort itself out way before 3.22.

Another question would be whether we expect (stable) distros to ship an xdg-app => flatpak update - in that case, do we need to come up with something fancier for 3.20?
Comment 7 Alexander Larsson 2016-05-19 14:26:00 UTC
We will be updating f23 to flatpak, but I don't think it matters much at this point. Use of flatpak/xdg-app on that will be limited in scope.
Comment 8 Florian Müllner 2016-05-19 15:22:46 UTC
I did mean "distros that use 3.20", so f24. Unless we update gcc/gs there, per-application access to location services will be broken, though I think I agree with you that it doesn't matter too much - it only really affects users that used a pre-release version, installed xdg-app *and* rejected access for some app ...

(Still probably a good idea to apply the rename to the stable branch, but without keeping compatibility with the old name ...)
Comment 9 Zeeshan Ali 2016-07-13 17:28:33 UTC
Created attachment 331439 [details] [review]
privacy: Update for PermissionStore DBus API changes

As xdg-app has been renamed to Flatpak, the permission store's bus name
and interface name have been changes as well.
Comment 10 Zeeshan Ali 2016-07-25 11:29:18 UTC
Attachment 331439 [details] pushed as 790b2c3 - privacy: Update for PermissionStore DBus API changes
Comment 11 Bastien Nocera 2016-07-25 11:51:29 UTC
(In reply to Zeeshan Ali (Khattak) from comment #10)
> Attachment 331439 [details] pushed as 790b2c3 - privacy: Update for
> PermissionStore DBus API changes

How about 3.20?