privacy: Update for PermissionStore DBus API changes

As xdg-app has been renamed to Flatpak, the permission store's bus name
and interface name have been changes as well.

https://bugzilla.gnome.org/show_bug.cgi?id=766603